# kpinentry

./: CMakeLists.txt  Makefile
cmake/: DefaultBuildType.cmake  FindLibAssuan.cmake  ProhibitInSource.cmake
src/: CMakeLists.txt  assuan.hpp  config.h.in  logging.cpp  logging.hpp  main.cpp  pinentry.cpp  pinentry.hpp
